@@ -1,5 +1,10 @@
 2008-03-29  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-dialog.c
+		- (security_combo_init): fix active item handling
+
+2008-03-29  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.glade
 		- remove the wep_passphrase_widget
 
